[package]
name = "cc-vault"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to manage and search Claude Code conversation history"
license = "MIT"
repository = "https://github.com/yourusername/cc-vault"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Database
duckdb = "0.9"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"

# TUI (for later)
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[features]
default = []
tui = ["ratatui", "crossterm"]
